# adventofcode2016

./: Makefile  README
AdventOfCode2016.hsproj/: .uuid  AdventOfCode2016.cabal  Day1.hs  Day10.hs  Day11.hs  Day2.hs  Day3.hs  Day4.hs  Day5.hs  Day6.hs  Day7.hs  Day8.hs  Day9.hs  Day9b.hs  _Day1.hsplay  _Day10.hsplay  _Day11.hsplay  _Day2.hsplay  _Day3.hsplay  _Day4.hsplay  _Day5.hsplay  _Day6.hsplay  _Day7.hsplay  _Day8.hsplay  _Day9.hsplay  _Day9b.hsplay
