name: AdventOfCode2016
version: 1.0
cabal-version: 1.22
build-type: Simple
license: AllRightsReserved
stability: experimental
data-files:
    day7.txt
    day3.txt
    day6.txt
    day10.txt
    day6test.txt
    day8.txt
    day9.txt
    day4.txt
    day1.txt
    day2.txt
x-ghc-framework-version: 8.0.2-8.9-3
x-last-ide-version: HfM1.5.1
Executable AdventOfCode2016
  main-is: Day1.hs
  buildable: True
  build-depends:
      containers -any,
      cryptohash -any,
      mtl -any,
      split -any,
      base16-bytestring -any,
      array -any,
      vector -any,
      base -any,
      matrix -any,
      parsec -any,
      lens -any,
      bytestring -any
  default-language: Haskell2010
  other-modules:
      Day5
      Day8
      Day6
      Day7
      Day9
      Day4
      Day9b
      Day10
      Day2
      Day3
